--- a/css/css/style.css
+++ b/css/css/style.css
@@ -1,17 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Julee&family=Style+Script&display=swap');
 
 
 
 
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Julee&family=Sedgwick+Ave&family=Style+Script&display=swap');
 :root{
     --main-color:#8e44ad;
     --black:#222;
@@ -23,14 +16,8 @@
     --border:.1rem solid var(--black);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
     --text-shadow:0 1.5rem 3rem rgba(0,0,0,.3);
-    --first_font: "Amatic SC", sans-serif;
-    --second_font: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
-    --third_font: "Amatic SC", sans-serif;
-    --fourth_font: "Alumni Sans", sans-serif;
-    --fift_font: "Style Script", cursive;
-    --sixt_font: "Sedgwick Ave", cursive;
-
-
+    --first_font:'Satisfy', cursive;
+    --second_font:font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
  }
 
 * {
@@ -38,7 +25,7 @@
     box-sizing: border-box;
     outline: none; border: none;
     text-decoration: none;
-    text-transform: none; 
+    text-transform: capitalize; 
 }
 
 /*--------scroll bar---------*/
@@ -58,10 +45,7 @@ html{
  html::-webkit-scrollbar-thumb{
     background-color: var(--main-color);
  }
-
-
-
-
+ 
 
  section{
     padding:5rem 10%;
@@ -120,14 +104,8 @@ html{
     font-size: 1.7rem;
     padding: 1rem 3rem;
     cursor: pointer;
+    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
     text-transform: uppercase;
-
-
-    line-height: 2;
-    font-family: var(--fourth_font);
-  
-    font-weight: 400;
-    font-style: normal;
 }
 
 .btn {
@@ -138,21 +116,13 @@ html{
     font-size: 1.7rem;
     padding: 1rem 3rem;
     cursor: pointer;
+    font-family: fantasy;
     text-transform: uppercase;
 
-    line-height: 2;
-    font-family: var(--fourth_font);
-  
-    font-weight: 400;
-    font-style: normal;
 }
 
 .btn:hover{
     color: var(--main-color);
-}
-
-.btn1:hover{
-  color: var(--main-color);
 }
 
  @keyframes fadeIn {
@@ -188,11 +158,8 @@ html{
 .header .logo {
     font-size: 4.5rem;
     color: var(--black);
-    font-family: var(--first_font);
+    font-family:'Satisfy', cursive;
     transition: color 0.3s; /* Smooth transition */
-
-    font-weight: 700;
-    font-style: normal;
 
 }
 
@@ -400,18 +367,9 @@ html{
     margin: 2rem;
     margin-right: 1rem;
     padding: 1rem;
-    
-    text-transform: none;
     text-shadow: 1px 1px #f1f2f598;
-    border-bottom: 1px solid #ddd;
-    font-size: 2.5rem;
-    transition: all 0.2s linear;
-    padding-right: 1rem;
-    line-height: 2;
-    color: var(--black);
-    font-family: var(--third_font);
-    font-weight: 700;
-    font-style: normal;
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -500,16 +458,12 @@ html{
 /*--------animace fadeIn nadpisu---------*/
 .home .slide .content span{
     display: block;
-    font-family: var(--fift_font);
-    font-size: 3.5rem;
+    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
+    font-size: 2.5rem;
     color: rgb(255, 255, 255);
     text-shadow: var(--text-shadow);
     padding-bottom: 1rem;
     animation: fadeIn 0.4s linear backwards 0.2s;
-
-
-    font-weight: 400;
-  font-style: normal;
 }
 
 .home .slide .content h3 {
@@ -605,17 +559,9 @@ html{
 .home_ul li {
   padding: 8px;
   border-bottom: 1px solid #ddd;
-  font-size: 2.5rem;
+  font-size: large;
   transition: all 0.2s linear;
   padding-right: 1rem;
-
-
-  line-height: 2;
-  color: var(--black);
-  font-family: var(--first_font);
-
-  font-weight: 700;
-  font-style: normal;
 }
 
 .home_ul li:hover {
@@ -687,12 +633,9 @@ html{
 /*--------text ---------*/
 .service .box-container .box h3 {
     color: var(--white);
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     padding-top: 1rem; 
-    font-family: var(--sixt_font);
-
-    font-weight: 700;
-  font-style: normal;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 /*--------dulezite flex dohromady s align-items ---------*/
@@ -719,24 +662,16 @@ html{
 .home-about .content h3 {
     font-size: 3.5rem;
     color: var(--black);
-    font-family: var(--sixt_font);
-    font-weight: 400;
-  font-style: normal;
-  text-transform: uppercase;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .home-about .content p {
-    font-size: 3rem;
+    font-size: 2rem;
     padding: 1rem 0;
     line-height: 2;
     color: var(--black);
-    font-family: var(--first_font);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-shadow: 1px 1px #0a0a0af6;
-
-    font-weight: 700;
-    font-style: normal;
-
-
 }
 
 .home-packages {
@@ -779,14 +714,8 @@ html{
 }
 
 .home-packages .box-container .box .content h3 {
-  font-size: 2.5rem;
-  color: var(--black);
-  background-color: rgba(26, 88, 33, 0.838);
-  line-height: 2;
-  color: var(--black);
-  font-family: var(--third_font);
-  font-weight: 700;
-  font-style: normal;
+    font-size: 2.5rem;
+    color:var(--black);
 
 }
 
@@ -794,20 +723,10 @@ html{
   color: var(--light-black);
   line-height: 2;
   padding: 1rem 0;
+  text-transform: capitalize;
   text-shadow: 1px 1px #f1f2f598;
-
-  border-bottom: 1px solid #ddd;
-  font-size: 2.5rem;
-  transition: all 0.2s linear;
-  padding-right: 1rem;
-
-
-  line-height: 2;
-  color: var(--black);
-  font-family: var(--first_font);
-
-  font-weight: 700;
-  font-style: normal;
+  font-size: large;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -866,32 +785,21 @@ html{
 }
 
 .about .content h3 {
-    font-size: 3.5rem;
+    font-size: 3rem;
     color: var(--black);
-    font-family: var(--sixt_font);
-    font-weight: 400;
-  font-style: normal;
-  text-transform: uppercase;
+    font-family: var(--first_font);
 }
 
 .about .content p {
-  color: var(--light-black);
-  line-height: 2;
-  padding: 1rem 0;
-  text-shadow: 1px 1px #f1f2f598;
-
-  border-bottom: 1px solid #ddd;
-  font-size: 2.5rem;
-  transition: all 0.2s linear;
-  padding-right: 1rem;
+    font-size: 2rem;
+    color: var(--light-black);
+    line-height: 2;
+    padding: 1rem;
+    text-shadow: 1px 1px #0a0a0af6;
 
 
-  line-height: 2;
-  color: var(--black);
-  font-family: var(--third_font);
-
-  font-weight: 700;
-  font-style: normal;
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -928,9 +836,8 @@ html{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-padding-top: 6rem;
 
-        max-height: 80vh; /* Set maximum height */
+        max-height: 90vh; /* Set maximum height */
         overflow-y: auto; /* Enable vertical scrolling */
     }
 
@@ -969,6 +876,12 @@ padding-top: 6rem;
       max-width: 250px;
     
       }
+
+
+
+
+
+
 
 
 
@@ -1104,9 +1017,6 @@ padding-top: 6rem;
     border-color: aliceblue;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-bottom: 3px solid #ddd;
-
-    background-color: #fff;
-
 }
 
 .nav__menu ul li:hover .dropdown__menu ul li:hover {
@@ -1172,9 +1082,8 @@ padding-top: 6rem;
 
 
 .map h1 {
-    font-size: 3.5rem;
-    color: var(--black);   
     margin-bottom: 4rem;
+    font-weight: bold;
     top: 3rem;
     left: 3rem;
     position: relative;
@@ -1182,12 +1091,12 @@ padding-top: 6rem;
     align-items:center;
     text-align: center;
     margin-top: 3rem;
-
+    font-size: 3.5rem;
+    color: var(--black);
     font-family: var(--sixt_font);
     font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
-
 
 }
 
@@ -1199,10 +1108,7 @@ padding-top: 6rem;
     line-height: 2;
     padding: 1rem;
     text-shadow: 1px 1px #0c101d5e;
-	
-    font-family: var(--third_font);
-    font-weight: 700;
-    font-style: normal;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
@@ -1212,23 +1118,6 @@ padding-top: 6rem;
     padding-right: 5%;
 
     }
-
-
-    @media (max-width: 700px){
-   
-      .map-responsive iframe{
-        width: 350px;
-        height: 350px;
-    
-        }
-  
-      }
-
-
-
-
-
-
 
 
 
@@ -1409,16 +1298,25 @@ padding-top: 6rem;
 
         .map h1 {
         font-size: 3rem;
+        color: var(--black);   
         margin-bottom: 4rem;
+        font-weight: bold;
         top: 3rem;
         left: 3rem;
-        
+        text-transform: capitalize;
+        position: relative;
+        display: flex;
+        align-items:center;
+        text-align: center;
+        margin-top: 3rem;
+        font-family: var(--second_font);
         }
     
         .map p {
         padding-left: 5rem;
         text-align: left;
         font-size: 1.5rem;
+        color: var(--light-black);
         line-height: 2;
         padding: 1rem;
         }
@@ -1441,25 +1339,20 @@ padding-top: 6rem;
     }
         .map h1 {
         font-size: 3rem;
+        margin-bottom: 4rem;
+        display: flex;
         }
 
         .map p {
         padding-left: 5rem;
         text-align: left;
         font-size: 1.5rem;
+        color: var(--light-black);
         line-height: 2;
         padding: 1rem;
         }
-
-        .map-responsive iframe{
-          width: 200px;
-          height: 200px;
-      
-          }
     }  
 
-
-  
 
 
 
@@ -1506,19 +1399,14 @@ padding-top: 6rem;
   padding-top: 3rem;
   margin-top: 3rem;
   border-top: 0.1rem solid var(--light-white);
-  font-size: 3rem;
+  font-size: 2rem;
   color: var(--white);
-  font-family: var(--third_font);
-
-  font-weight: 700;
-
+  font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
 }
 
 .footer .credit span {
     color: var(--main-color);
-    font-family: var(--third_font);
-font-weight: 700;
-    font-size: 3rem;
+    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
   }
 
 
@@ -1581,29 +1469,16 @@ font-weight: 700;
 .packages .box-container .box .content h3 {
   font-size: 2.5rem;
   color: var(--black);
-background-color: rgba(26, 88, 33, 0.838);
-
-  line-height: 2;
-    color: var(--black);
-    font-family: var(--third_font);
-    font-weight: 700;
-    font-style: normal;
 }
 
 .packages .box-container .box .content p {
   color: var(--light-black);
-    line-height: 2;
-    padding: 1rem 0;
-    text-shadow: 1px 1px #f1f2f598;
-    border-bottom: 1px solid #ddd;
-    font-size: 2.5rem;
-    transition: all 0.2s linear;
-    padding-right: 1rem;
-    line-height: 2;
-    color: var(--black);
-    font-family: var(--first_font);
-    font-weight: 700;
-    font-style: normal;
+  line-height: 2;
+  padding: 1rem 0;
+  text-transform: capitalize;
+  text-shadow: 1px 1px #f1f2f598;
+  font-size: large;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .load-more {
@@ -2175,30 +2050,6 @@ svg {
 
 
 
-.text-under-toggle {
-  position: absolute;
-  bottom: 2rem; /* Adjust the value to position the text properly */
-  right: 5%;
-  transform: translateX(-5%);
-  
-  text-shadow: 1px 1px #f1f2f598;
-    border-bottom: 1px solid #ddd;
-    font-size: 4.5rem;
-    padding-right: 1rem;
-    line-height: 2;
-    color: var(--black);
-    font-family: var(--third_font);
-    font-weight: 700;
-    font-style: normal;
-
-
-
-
-
-}
-
-
-
 
 
 
@@ -2724,7 +2575,7 @@ input{
   .about__description {
     margin-bottom: 2rem;
     text-shadow: 0.5px 0.5px #f1f2f598;
-    font-size: 14px;
+    font-size: 19px;
   }
 
 
@@ -2754,7 +2605,6 @@ input{
     /*--hamburger- menu pri zmene velikosti okna na 768px---------*/
    @media (max-width: 768px){
    
-    
     .about__data .section__title {
       text-align: initial;
     }
@@ -2798,9 +2648,7 @@ input{
 
   .modal {
     width: 80% !important;
-    left: 10% !important;
-    height: 70% !important; 
-
+    left: 3% !important;
   }
 
   .about_pic {
@@ -2835,9 +2683,7 @@ input{
 
    .modal {
     width: 80% !important;
-    left: 5% !important;
-    height: 50% !important;
-
+    left: 3% !important;
   }
 
   .gallery {
@@ -2873,10 +2719,22 @@ input{
 }
 .heading-title{
     font-size: 3.5rem;
-    font-family: var(--sixt_font);
-    font-weight: 400;
-  font-style: normal;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
